# revolt-rs

./: .gitignore  Cargo.toml  README.md  index.js  openapi-generator-config.json  package-lock.json  package.json
.github/workflows/: rust.yml
crates/api/: Cargo.toml  README.md
crates/api/.openapi-generator/: FILES
crates/api/docs/: AccountApi.md  AccountInfo.md  AccountStrike.md  AdminApi.md  AllMemberResponse.md  AuthifierError.md  AuthifierErrorOneOf.md  AuthifierErrorOneOf1.md  AuthifierErrorOneOf10.md  AuthifierErrorOneOf11.md  AuthifierErrorOneOf12.md  AuthifierErrorOneOf13.md  AuthifierErrorOneOf14.md  AuthifierErrorOneOf15.md  AuthifierErrorOneOf16.md  AuthifierErrorOneOf2.md  AuthifierErrorOneOf3.md  AuthifierErrorOneOf4.md  AuthifierErrorOneOf5.md  AuthifierErrorOneOf6.md  AuthifierErrorOneOf7.md  AuthifierErrorOneOf8.md  AuthifierErrorOneOf9.md  BanListResult.md  BandcampType.md  BannedUser.md  BannedUserAvatar.md  Bot.md  BotInformation.md  BotResponse.md  BotResponseBot.md  BotResponseUser.md  BotsApi.md  BuildInformation.md  BulkMessageResponse.md  BulkMessageResponseAnyOf.md  CaptchaFeature.md  Category.md  Channel.md  ChannelCompositeKey.md  (+394 more)
crates/api/src/apis/: account_api.rs  admin_api.rs  bots_api.rs  channel_information_api.rs  channel_invites_api.rs  channel_permissions_api.rs  configuration.rs  core_api.rs  direct_messaging_api.rs  emojis_api.rs  groups_api.rs  interactions_api.rs  invites_api.rs  messaging_api.rs  mfa_api.rs  mod.rs  onboarding_api.rs  relationships_api.rs  server_customisation_api.rs  server_information_api.rs  server_members_api.rs  server_permissions_api.rs  session_api.rs  sync_api.rs  user_information_api.rs  user_safety_api.rs  voice_api.rs  web_push_api.rs  webhooks_api.rs
crates/api/src/models/: account_info.rs  account_strike.rs  all_member_response.rs  authifier_error.rs  authifier_error_one_of.rs  authifier_error_one_of_1.rs  authifier_error_one_of_10.rs  authifier_error_one_of_11.rs  authifier_error_one_of_12.rs  authifier_error_one_of_13.rs  authifier_error_one_of_14.rs  authifier_error_one_of_15.rs  authifier_error_one_of_16.rs  authifier_error_one_of_2.rs  authifier_error_one_of_3.rs  authifier_error_one_of_4.rs  authifier_error_one_of_5.rs  authifier_error_one_of_6.rs  authifier_error_one_of_7.rs  authifier_error_one_of_8.rs  authifier_error_one_of_9.rs  ban_list_result.rs  bandcamp_type.rs  banned_user.rs  banned_user_avatar.rs  bot.rs  bot_information.rs  bot_response.rs  bot_response_bot.rs  bot_response_user.rs  build_information.rs  bulk_message_response.rs  bulk_message_response_any_of.rs  captcha_feature.rs  category.rs  channel.rs  channel_composite_key.rs  channel_one_of.rs  channel_one_of_1.rs  channel_one_of_2.rs  (+368 more)
crates/examples/bot/: Cargo.toml
crates/examples/bot/src/: main.rs
crates/lib/: Cargo.toml  README.md
crates/lib/src/: lib.rs
crates/lib/src/client/: mod.rs
crates/lib/src/websocket/: error.rs  mod.rs
