[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/lib",

    "crates/examples/bot"
]

[workspace.package]
authors = ["Yuuki Rika <yvvki@duck.com>"]
license = "MIT OR Apache-2.0"
description = "Rust typings for the Revolt API."
repository = "https://github.com/yvvki/revolute"

[workspace.dependencies]
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
