
[package]
name = "revolt_api"
version = "0.5.5"
authors = ["OpenAPI Generator team and contributors", "Yuuki Rika"]
edition = "2018"
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
