
[package]
name = "revolt_api"
version = "0.6.5"
authors = ["contact@revolt.chat", "Yuuki Rika <yvvki@duck.com>"]
description = "Open source user-first chat platform."
license = "AGPL-3.0-or-later"
edition = "2018"
repository.workspace = true

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
