[package]
name = "revolute"
version = "0.1.0"
edition = "2021"

authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies.revolt_api]
path = "../api"
version = "0.5"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
