[package]
name = "revolute"
version = "0.2.0"
edition = "2021"

authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies.revolt_api]
path = "../api"
version = "0.5"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { worspace = true }

tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"
